[package]
name = "combine-latest"
description = "Combines two streams into a new stream which yields tuples with the latest values from each input stream"
version = "1.1.2"
edition = "2021"
authors = ["Marcus Svensson <marcus@lincopia.com>"]
license = "MIT"
repository = "https://github.com/mrcz/combine-latest"

[dependencies]
futures-core = "0.3.26"
futures-util = "0.3.26"

[dev-dependencies]
futures = "0.3"
