[package]
name = "combine-latest"
description = "Combines two or more streams into a new stream which yields tuples with the latest values from each input stream"
version = "1.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["Marcus Svensson <marcus@lincopia.com>"]
license = "MIT"
repository = "https://github.com/mrcz/combine-latest"
documentation = "https://docs.rs/combine-latest"
keywords = ["stream", "combine", "reactive", "async", "futures"]
categories = ["asynchronous"]

[dependencies]
futures-core = "0.3"
futures-util = "0.3"

[dev-dependencies]
futures = "0.3"
